// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translate props get props on demand 1`] = `
"export let answer = 42;
export let question;"
`;

exports[`translate props handle default prop 1`] = `"export let answer = 42;"`;

exports[`translate props use {} to get props 1`] = `
"export let answer;
export let question;"
`;

exports[`translate script section extrat script from code 1`] = `"let name = 'world';"`;

exports[`translate script section ignore variable declaration starts with $ 1`] = `"let greeting = 'hello';"`;

exports[`translate script section track change 1`] = `
"let count = 0;
let doubled = 0;
$: {
  doubled = count * 2;
}"
`;
